Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31054

QtC crashes when sources edited and build is triggered while "Find unused functions" is working

    XMLWordPrintable

Details

    • Linux/Wayland
    • c246cb870 (14.0)

    Description

      Run the "find unused functions" tool and try to remove one of those functions while the tool is running. Editing files and triggering build make QtC freeze for a few seconds and then it crashes.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-31054
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            eugeneshalygin Eugene Shalygin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes