LanguageClient: postpone unreachable server error reporting

Since the overall nature of the communication is asynchronous calling
functions might not expect that an error is reported from within the
sendMessage function.

Fixes: QTCREATORBUG-31054
Change-Id: Ie73510eb632408a9f7a9367c3a3e47ad021da7fe
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>